# Hotel-management

./: CMakeLists.txt  FilePhong.txt  File_TT_QL.txt  Khach_Hang_Cu.txt  Khach_Hang_Moi.txt  Phong_T.txt  Phong_TG.txt  dialogdangnhap.cpp  dialogdangnhap.h  dialogdangnhap.ui  dialognhapkhachhang.cpp  dialognhapkhachhang.h  dialognhapkhachhang.ui  dialogthanhtoan.cpp  dialogthanhtoan.h  dialogthanhtoan.ui  hashtable.cpp  hashtable.h  khachhang.cpp  khachhang.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nguoi.cpp  nguoi.h  phongcoban.cpp  phongcoban.h  phongthuong.cpp  phongthuong.h  phongthuonggia.cpp  phongthuonggia.h  quanly.h  quanlykhachhang.cpp  quanlykhachhang.h  quanlyphong.cpp  quanlyphong.h  tieptan.cpp  tieptan.h
